# project-config

./: .ansible-lint  .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  REVIEWING.rst  bindep.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  zuul.yaml
accessbot/: channels.yaml
data/: stackforge-renames  stackforge-retirements
docs-site/: generate_infra_index.py  infra-documents.yaml  infra-index.html.tmpl
gerrit/: projects.yaml
gerritbot/: channels.yaml
grafana/: README.rst  afs.yaml  bridge.yaml  centos.yaml  ceph.yaml  create-nodepool-dib.sh  create-nodepool.sh  datasource.yaml  demo.yaml  devstack.yaml  fedora.yaml  git.yaml  horizon.yaml  infra-prod-deployment.json  kolla.yaml  midonet.yaml  mosquitto.yaml  networking-bagpipe.yaml  networking-bgpvpn.yaml  networking-midonet.yaml  networking-odl.yaml  networking-ovn.yaml  networking-sfc.yaml  neutron-dynamic-routing.yaml  neutron-fwaas.yaml  neutron-lib.yaml  neutron-stable-minusone.yaml  neutron-stable-minustwo.yaml  neutron-tempest-plugin.yaml  neutron-vpnaas.yaml  neutron.yaml  nodepool-airship-citycloud.yaml  nodepool-bluebox.yaml  nodepool-citycloud.yaml  nodepool-datacentred.yaml  nodepool-dib-status.json  nodepool-dib.base.template  nodepool-dib.image.template  nodepool-dib.yaml  nodepool-entercloud.yaml  (+48 more)
nodepool/: nb01-test.opendev.org.yaml  nb01.opendev.org.yaml  nb03.opendev.org.yaml  nb03.openstack.org.yaml  nb04.opendev.org.yaml  nl01.opendev.org.yaml  nl01.openstack.org.yaml  nl02.opendev.org.yaml  nl02.openstack.org.yaml  nl03.opendev.org.yaml  nl03.openstack.org.yaml  (+8 more)
(+2324 files in other folders)
