[metadata]
name = project-config
summary = Infrastructure Configuration for the OpenStack Project
description_file =
    README.rst
author = OpenStack Infrastructure Team
author_email = openstack-infra@lists.openstack.org
home_page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
